fix: detect scripts in nested folders
Signed-off-by: Fred Bricon <fbricon@gmail.com>